# Micromouse_Project

./: CMakeLists.txt  README.md  accelerometer.c  algo.c  gyro.c  motor.c  motor.h  prj.conf  sensing.h
include/: IR.h  accelerometer.h  algo.h  control.h  gyro.h  motor.h  sensing.h  shared_mutex.h  uart.h  ultrasonic.h
src/: IR.c  accelerometer.c  algo.c  backupdts.dts  control.c  gyro.c  main.c  motor.c  sensing.c  uart.c  ultrasonic.c
